Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Annual_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Annual_Gross_Margin__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>TotalPrice  *  Gross_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>