Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Closed_Growth_Value__c.field-meta.xml
<CustomField>
    <fullName>Closed_Growth_Value__c</fullName>
    <description>Display Growth if Opportunity is Closed</description>
    <formula>IF(
    OR(
        ISPICKVAL(Opportunity.StageName, &quot;5. Closed Withdrawn&quot;),
        ISPICKVAL(Opportunity.StageName, &quot;6. Closed Lost&quot;),
        ISPICKVAL(Opportunity.StageName, &quot;7. Closed Won&quot;)
    ),
    Individual_Growth__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Growth Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>