Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Contract_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Contract_Revenue_Target__c</fullName>
    <label>Contract Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>