Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Gross_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Percentage__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <label>% Gross Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>