Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/In_Year_Gross_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Gross_Margin_Target__c</fullName>
    <label>In-Year Gross Margin Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>