Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/In_Year_Individual_Growth_GM__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Individual_Growth_GM__c</fullName>
    <formula>In_Year_Individual_Growth_Revenue__c * Gross_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Individual Growth GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>