Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/In_Year_Individual_Growth_Revenue__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Individual_Growth_Revenue__c</fullName>
    <formula>IF(YEAR(Opportunity.Contract_Start_Date__c) = YEAR(Opportunity.Contract_End_Date__c),
Individual_Growth__c,
(Individual_Growth__c / 365) * Opportunity.Remaining_Days_In_Year__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Individual Growth Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>