Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/In_Year_Individual_Retention_Revenue__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Individual_Retention_Revenue__c</fullName>
    <formula>IF(YEAR(Opportunity.Contract_Start_Date__c) = YEAR(Opportunity.Contract_End_Date__c),
Individual_Retention__c,
(Individual_Retention__c / 365) * Remaining_Days_In_Year__c
	)
			
					/*	If the same year then show full value, if not the same year then
show the value scaled down to reflect only the amount falling in the starting FY*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Individual Retention Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>