Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/In_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>In_Year_Revenue__c</fullName>
    <description>AD-339 to see the In Year value for Contractual Products on an Opportunity</description>
    <formula>IF(ISPICKVAL( Service_Type__c , &apos;Contractual&apos;),
IF(YEAR(Opportunity.Contract_Start_Date__c) = YEAR(Opportunity.Contract_End_Date__c), TotalPrice,(TotalPrice / 365) * Opportunity.Remaining_Days_In_Year__c),

/* For Contractual where the Start and End are in the same year show the full Annual Revenue. If not the same year then
show the Annual Revenue scaled down to reflect only the amount falling in the starting FY*/

IF(OR(ISPICKVAL(Service_Type__c, &apos;Project&apos;), ISPICKVAL(Service_Type__c, &apos;Ad-hoc&apos;)),
TotalPrice,
0
)
)

/* For Service or Ad-Hoc include the full amount. */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In-Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>