Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Contractual_Gain__c.field-meta.xml
<CustomField>
    <fullName>Individual_Contractual_Gain__c</fullName>
    <description>Individual Contractual Gain Value</description>
    <formula>IF(
    AND(
        Opportunity.Total_Performance__c &gt; 0,
        ISPICKVAL(Opportunity.Type, &quot;New Customer&quot;),
        ISPICKVAL(Service_Type__c, &quot;Contractual&quot;)
    ),
    Individual_Growth__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>