Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Contractual_Retain__c.field-meta.xml
<CustomField>
    <fullName>Individual_Contractual_Retain__c</fullName>
    <description>Individual Contractual Retention Value</description>
    <formula>IF(
OR
				(
Opportunity.Total_Development__c &lt;= 0,
Opportunity.Total_Performance__c &lt;= 0,
NOT(ISPICKVAL(Service_Type__c, &quot;Contractual&quot;	))
    ),
    0,
    (TotalPrice / Opportunity.Annual_Contractual_Revenue__c) * Opportunity.Total_Development__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>