Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Extension_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Individual_Extension_Gross_Margin__c</fullName>
    <formula>Individual_Extension__c *  Gross_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Extension GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>