Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Growth__c.field-meta.xml
<CustomField>
    <fullName>Individual_Growth__c</fullName>
    <formula>if( OR (ISPICKVAL( Service_Type__c , &quot;Ad-hoc&quot;), ISPICKVAL( Service_Type__c , &quot;Project&quot;)) , 0,
 
if( Opportunity.Growth__c = 0 , 0 , TotalPrice - ( ( Opportunity.Current_Contract_Value__c / Opportunity.Annual_Contractual_Revenue__c) * TotalPrice) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>