Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_In_Year_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Individual_In_Year_Revenue_Target__c</fullName>
    <label>Individual In-Year Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>