Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Retention__c.field-meta.xml
<CustomField>
    <fullName>Individual_Retention__c</fullName>
    <formula>(TotalPrice /Opportunity.Total_Performance__c)* Opportunity.Retention_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>