Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Retention_GM__c.field-meta.xml
<CustomField>
    <fullName>Individual_Retention_GM__c</fullName>
    <formula>Individual_Retention__c *  Gross_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Retention GM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>