Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Total_Growth__c.field-meta.xml
<CustomField>
    <fullName>Individual_Total_Growth__c</fullName>
    <formula>if( or( TotalPrice &lt;=0,Opportunity.Total_Performance__c &lt;=0,Opportunity.Total_Growth__c &lt;=0) , 0 , (TotalPrice / Opportunity.Total_Performance__c )* Opportunity.Total_Growth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Total Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>