Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Individual_Total_Performance__c.field-meta.xml
<CustomField>
    <fullName>Individual_Total_Performance__c</fullName>
    <formula>Individual_Total_Growth__c + Individual_Development__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>