Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <description>True where the User is the Owner</description>
    <formula>$User.Id = Owner__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>