Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Monthly_Individual_Ad_hoc_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Individual_Ad_hoc_Revenue__c</fullName>
    <formula>IF(
    ISPICKVAL(Service_Type__c, &quot;Ad-hoc&quot;),
    TotalPrice / IF(Opportunity.Contract_Term_Months__c = 0, 1, Opportunity.Contract_Term_Months__c),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Individual Ad-hoc Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>