Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <formula>TEXT(Opportunity.StageName)</formula>
    <label>Opp Stage</label>
    <type>Text</type>
</CustomField>