Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Award_Date__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <label>Opportunity Award Date</label>
    <type>Date</type>
</CustomField>