Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/OppServiceCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>OppServiceCaseSafeID__c</fullName>
    <formula>CaseSafeId(Id)</formula>
    <label>OppServiceCaseSafeID</label>
    <type>Text</type>
</CustomField>