Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owned_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Owned_By_Current_User__c</fullName>
    <formula>Owner__c = $User.Id</formula>
    <inlineHelpText>Ticked when the Current User is the Owner of the Opportunity Service.</inlineHelpText>
    <label>Owned By Current User</label>
    <type>Checkbox</type>
</CustomField>