Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-273 to see who internally is involved on the services being sold</description>
    <label>Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Region__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>