Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <formula>Owner__r.IsActive</formula>
    <label>Owner Active</label>
    <type>Checkbox</type>
</CustomField>