Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit__c</fullName>
    <description>Data Consolidation - field to capture the Opportunity Product Owner&apos;s Business Unit</description>
    <formula>TEXT( Owner__r.Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Business Unit</label>
    <type>Text</type>
</CustomField>