Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owner_Business_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Business_Unit_Formula__c</fullName>
    <formula>TEXT(Owner__r.Business_Unit__c)</formula>
    <label>Owner Business Unit (Formula)</label>
    <type>Text</type>
</CustomField>