Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owner_Country_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country_Formula__c</fullName>
    <formula>Owner__r.Country</formula>
    <label>Owner Country (Formula)</label>
    <type>Text</type>
</CustomField>