Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owner_Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region_Formula__c</fullName>
    <formula>TEXT(Owner__r.Region__c)</formula>
    <label>Owner Region (Formula)</label>
    <type>Text</type>
</CustomField>