Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Owner_Team_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team_Formula__c</fullName>
    <formula>TEXT(Owner__r.Team__c)</formula>
    <label>Owner Team (Formula)</label>
    <type>Text</type>
</CustomField>