Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>AD-377 - Store Product Family on the Opportunity Product</description>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Family</label>
    <type>Text</type>
</CustomField>