Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Project_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Project_Revenue_Target__c</fullName>
    <label>Project Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>