Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Remaining_Days_In_Year__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days_In_Year__c</fullName>
    <description>Copy the Remaining Days In Year from Opportunity.
The number of days of the Opp in the start year. Used for In Year calculations.</description>
    <formula>Opportunity.Remaining_Days_In_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days In Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>