Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Control Installation</fullName>
            </value>
            <value>
                <fullName>Aircraft Appearance</fullName>
            </value>
            <value>
                <fullName>Asset Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Building Fabric Management</fullName>
            </value>
            <value>
                <fullName>CAFM &amp; Helpdesk</fullName>
            </value>
            <value>
                <fullName>Carpet Cleaning</fullName>
            </value>
            <value>
                <fullName>CCTV Installations</fullName>
            </value>
            <value>
                <fullName>CCTV Maintenance</fullName>
            </value>
            <value>
                <fullName>Cobotics</fullName>
            </value>
            <value>
                <fullName>Confidential Waste</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Corporate Catering</fullName>
            </value>
            <value>
                <fullName>Daily Cleaning</fullName>
            </value>
            <value>
                <fullName>Electrical Compliance Testing/PAT</fullName>
            </value>
            <value>
                <fullName>Environmental Compliance</fullName>
            </value>
            <value>
                <fullName>Event Cleaning</fullName>
            </value>
            <value>
                <fullName>External Cleaning</fullName>
            </value>
            <value>
                <fullName>Fire Maintenance</fullName>
            </value>
            <value>
                <fullName>Fixed Wire</fullName>
            </value>
            <value>
                <fullName>Front of House &amp; Concierge</fullName>
            </value>
            <value>
                <fullName>Grounds Maintenance</fullName>
            </value>
            <value>
                <fullName>Guards Mobile</fullName>
            </value>
            <value>
                <fullName>Guards Static</fullName>
            </value>
            <value>
                <fullName>Hazardous Waste</fullName>
            </value>
            <value>
                <fullName>Industrial Cleaning</fullName>
            </value>
            <value>
                <fullName>Internal Plants</fullName>
            </value>
            <value>
                <fullName>Intruder Alarms Installation</fullName>
            </value>
            <value>
                <fullName>Labour Supply</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>