Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Service_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Owner_Name__c</fullName>
    <formula>Owner__r.Full_Name__c</formula>
    <label>Service Owner Name</label>
    <type>Text</type>
</CustomField>