Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/System_User_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>System_User_Business_Unit__c</fullName>
    <description>Identifies if the viewing user is in the same Business Unit</description>
    <formula>TEXT( $User.Business_Unit__c) = Owner_Business_Unit__c</formula>
    <label>User Business Unit</label>
    <type>Checkbox</type>
</CustomField>