Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Technical_Discovery_Description__c.field-meta.xml
<CustomField>
    <fullName>Technical_Discovery_Description__c</fullName>
    <description>AD-682 description for Products with Product Family equal to IOT</description>
    <label>Technical Discovery Description</label>
    <type>TextArea</type>
</CustomField>