Agentforce/force-app/main/default/objects/OpportunityLineItem/fields/Won_Growth_Value__c.field-meta.xml
<CustomField>
    <fullName>Won_Growth_Value__c</fullName>
    <description>Display Growth Value if Opportunity is Closed Won</description>
    <formula>IF(
    ISPICKVAL(Opportunity.StageName, &quot;7. Closed Won&quot;),
    Individual_Growth__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Growth Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>