Agentforce/force-app/main/default/objects/OpportunityLineItem/validationRules/CloseWonandWritten_Confirmation.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseWonandWritten_Confirmation</fullName>
    <active>true</active>
    <description>AD-322 to be able to update the Product Line Items when an Opportunity Stage is &apos;Closed Won&apos; and the Sub-Stage is &apos;Written Confirmation&apos;</description>
    <errorConditionFormula>AND(
$Setup.OCS_Config_Settings_CSH__c.Validation_Rules_Disabled__c = FALSE,
ISPICKVAL(Opportunity.Sub_Stage__c,&apos;7.2 T&amp;Cs Signed&apos;),

OR(
ISCHANGED(Service_Type__c),
ISCHANGED(Owner__c),
ISCHANGED(Gross_Percentage__c),
ISCHANGED(UnitPrice)
),

AND(
$Permission.System_Administrator = FALSE,
$Permission.Regional_Delegated_Administrator = FALSE,
$Permission.Delegated_Admin = FALSE,
$Permission.Country_Delegated_Administrator = FALSE
)
)</errorConditionFormula>
    <errorMessage>You cannot change this Opportunity Service because the Opportunity Stage is &apos;7.2 T&amp;Cs Signed&apos;. Please contact your Country&apos;s Administrator if you need to make any updates.</errorMessage>
</ValidationRule>